diesel_compile_tests/tests/ui/belongs_to_invalid_option_syntax.stderr
error: `belongs_to` must be in the form `belongs_to(...)`
  --> $DIR/belongs_to_invalid_option_syntax.rs:22:10
   |
22 | #[derive(Associations)]
   |          ^^^^^^^^^^^^

error: Expected a struct name
  --> $DIR/belongs_to_invalid_option_syntax.rs:22:10
   |
22 | #[derive(Associations)]
   |          ^^^^^^^^^^^^
   |
   = help: e.g. `#[belongs_to(User)]`

error: `foreign_key` must be in the form `foreign_key = "value"`
  --> $DIR/belongs_to_invalid_option_syntax.rs:22:10
   |
22 | #[derive(Associations)]
   |          ^^^^^^^^^^^^

warning: The form `foreign_key(value)` is deprecated. Use `foreign_key = "value"` instead
  --> $DIR/belongs_to_invalid_option_syntax.rs:22:10
   |
22 | #[derive(Associations)]
   |          ^^^^^^^^^^^^

warning: Unrecognized option random_option
  --> $DIR/belongs_to_invalid_option_syntax.rs:22:10
   |
22 | #[derive(Associations)]
   |          ^^^^^^^^^^^^

error: aborting due to 3 previous errors

